--- a/.settings/org.eclipse.buildship.core.prefs
+++ b/.settings/org.eclipse.buildship.core.prefs
@@ -4,7 +4,7 @@ build.scans.enabled=false
 connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
 connection.project.dir=
 eclipse.preferences.version=1
-gradle.user.home=
+gradle.account.home=
 java.home=/Library/Java/JavaVirtualMachines/jdk-17.0.4.1.jdk/Contents/Home
 jvm.arguments=
 offline.mode=false
