--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,8 +23,9 @@ jobs:
       run: ./gradlew build
     - name: Build debug APK
       run: bash ./gradlew assembleDebug --stacktrace
+    - run: mv app/build/outputs/apk/debug/app-debug.apk b07.apk
     - name: Upload APK
       uses: actions/upload-artifact@v1
       with:
           name: app
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: b07.apk
